--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,39 +1,41 @@
 [project]
-name = "rag-research-graph"
-version = "0.0.1"
-description = "Starter template for making a custom RAG research agent graph in LangGraph."
+name = "neo-rag-research-agent"
+version = "0.1.0"
+description = "A RAG research agent using LangGraph"
 authors = [
-    { name = "Vadym Barda", email = "19161700+vbarda@users.noreply.github.com" }
+    { name = "Neo", email = "espen@neo.no" }
 ]
-license = { text = "MIT" }
-readme = "README.md"
-requires-python = ">=3.9"
 dependencies = [
-    "langgraph>=0.2.6",
-    "langchain-openai>=0.1.22",
-    "langchain-anthropic>=0.1.23",
-    "langchain>=0.2.14",
-    "langchain-fireworks>=0.1.7",
-    "python-dotenv>=1.0.1",
-    "langchain-elasticsearch>=0.2.2,<0.3.0",
-    "langchain-pinecone>=0.1.3,<0.2.0",
-    "msgspec>=0.18.6",
-    "langchain-mongodb>=0.1.9",
-    "langchain-cohere>=0.2.4",
+    "langgraph>=0.0.19",
+    "langchain>=0.1.0",
+    "langchain-core>=0.1.0",
+    "langchain-openai>=0.0.5",
+    "langchain-pinecone>=0.0.2",
+    "pinecone-client>=3.0.0",
+    "python-dotenv>=1.0.0",
 ]
+readme = "README.md"
+requires-python = ">= 3.9"
 
 [build-system]
-requires = ["setuptools>=73.0.0", "wheel"]
-build-backend = "setuptools.build_meta"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
-[tool.setuptools]
-packages = ["retrieval_graph", "index_graph", "shared"]
-[tool.setuptools.package-dir]
-"langgraph.templates.retrieval_graph" = "src/retrieval_graph"
-"langgraph.templates.index_graph" = "src/index_graph"
+[tool.ruff]
+line-length = 88
+extend-select = ["I"]
+
+[project.optional-dependencies]
+dev = ["pytest", "ruff"]
+
+[tool.hatch.metadata]
+allow-direct-references = true
+
+[tool.hatch.build.targets.wheel]
+packages = ["retrieval_graph", "shared"]
+
+[project.entry-points."langgraph.templates"]
 "retrieval_graph" = "src/retrieval_graph"
-"index_graph" = "src/index_graph"
-"shared" = "src/shared"
 
-[tool.setuptools.package-data]
-"*" = ["py.typed"]
+[project.entry-points."langgraph.graphs"]
+"retrieval_graph" = "src/retrieval_graph"
