--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "langchain>=0.1.0",
     "langchain-core>=0.1.0",
     "langchain-openai>=0.0.5",
+    "langchain-anthropic>=0.1.0",
     "langchain-pinecone>=0.0.2",
     "pinecone-client>=3.0.0",
     "openai>=1.0.0",
